# calibre-web-audit

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: frontend_plan.md  hardcover-schema.json  operator_guide.md  rewrite_plan.md
docs/legacy/: hardcover_calibre_audit.py
hardcover_tools/: __init__.py
hardcover_tools/cli/: __init__.py  apply.py  audit.py  discovery.py
hardcover_tools/core/: __init__.py  _legacy_backend.py  apply_engine.py  audit_engine.py  audit_insights.py  audit_pipeline.py  audit_reporting.py  bookshelf_client.py  bookshelf_export.py  calibre_db.py  command_results.py  command_runtime.py  config.py  cwa_compat.py  discovery_engine.py  discovery_export_common.py  discovery_sources.py  ebook_meta.py  edition_selection.py  file_metadata_writer.py  hardcover_client.py  identifiers.py  language.py  legacy_runtime.py  matching.py  models.py  output.py  runtime_defaults.py  runtime_io.py  runtime_support.py  shelfmark_client.py  shelfmark_export.py  text_normalization.py  work_classification.py  work_matching.py
tests/: conftest.py  test_apply_config.py  test_apply_engine.py  test_apply_file_metadata.py  test_audit_insights.py  test_audit_output.py  test_audit_pipeline.py  test_audit_reporting.py  test_blank_language_buckets.py  test_cli_help.py  test_command_runtime.py  test_cwa_runtime.py  test_discovery_bookshelf.py  test_discovery_classification.py  test_discovery_shelfmark.py  test_edition_selection.py  test_matching.py  test_packaging_metadata.py  test_runtime_io.py  test_stage1_contract.py  test_text_cleaning.py
(+3 files in other folders)
