[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hardcover-tools"
version = "0.1.0"
description = "Maintainable rewrite of a Calibre/Hardcover audit, discovery, and apply workflow."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
hardcover-audit = "hardcover_tools.cli.audit:main"
hardcover-discovery = "hardcover_tools.cli.discovery:main"
hardcover-apply = "hardcover_tools.cli.apply:main"

[tool.setuptools.packages.find]
include = ["hardcover_tools*"]
